--- a/eureka-service.properties
+++ b/eureka-service.properties
@@ -1,4 +1,4 @@
 server.port=${PORT:8761}
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.serviceUrl.defaultZone=${EUREKA_SERVICE_SERVICE_HOST}:${EUREKA_SERVICE_SERVICE_PORT_HTTP}
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVICE_SERVICE_HOST}:${EUREKA_SERVICE_SERVICE_PORT_HTTP}
