added eureka to the endpoint

--- a/callme-service.properties
+++ b/callme-service.properties
@@ -1,2 +1,2 @@
 server.port=${PORT:9090}
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVICE_SERVICE_HOST}:${EUREKA_SERVICE_SERVICE_PORT_HTTP}
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVICE_SERVICE_HOST}:${EUREKA_SERVICE_SERVICE_PORT_HTTP}/eureka
